...
    }
    
    
    func leadingSwipeActionConfigurationForListCellItem(_ item: Transaction) -> UISwipeActionsConfiguration? {
        print("swipe")
        
        let deleteAction = UIContextualAction(style: .destructive, title: "Delete") {
            [weak self] (_, _, completion) in
            guard let self = self else { return }
            // trigger the action with a reference to the model
            self.deleteItem(item)
            completion(true)
        }
...
